--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,8 @@
 layout: default
 ---
 
+{% include subpage-header.html %}
+
 <!-- POST HTML -->
 <article id="post">
     <div class="container">
@@ -41,12 +43,59 @@ layout: default
                 <p class="lead">{{ page.lead }}</p>
                 {% endif %}
 
-                <p>Never in all their history have men been able truly to conceive of the world as one: a single sphere, a globe, having the qualities of a globe, a round earth in which all the directions eventually meet, in which there is no center because every point, or none, is center — an equal earth which all men occupy as equals. The airman’s earth, if free men make it, will be truly round: a globe in practice, not in theory.</p>
+                {{ page.content }}
 
-                <p>Science cuts two ways, of course; its products can be used for both good and evil. But there’s no turning back from science. The early warnings about technological dangers also come from science.</p>
 
-                <p>What was most significant about the lunar voyage was not that man set foot on the Moon but that they set eye on the earth.</p>
+                <hr>
 
-                <p>A Chinese tale tells of some men sent to harm a young girl who, upon seeing her beauty, become her protectors rather than her violators. That’s how I felt seeing the Earth for the first time. I could not help but love and cherish her.</p>
+                  {% if page.revious %}
+                  <span class="previous-link">
+                    <a rel="prev" href="{{ page.previous.url }}">Previous article</a>
+                  </span>
+                  {% endif %}
 
-                <blockquote><p>For those who have seen the Earth from space, and for the hundreds and perhaps thousands more &gt; who will, the experience most certainly changes your perspective. The things that we share in &gt; our world are far more valuable than those which divide us.</p>
+                  {% if page.next %}
+                  <span class="next-link pull-right">
+                    <a rel="next" href="{{ page.next.url }}">Next article</a>
+                  </span>
+                  {% endif %}
+
+
+                <hr>
+            </div>
+
+            <!-- Blog Sidebar Widgets Column -->
+            <div class="col-md-4">
+
+                <!-- Blog Categories Well -->
+                <div class="well">
+                    <h4>Blog Categories</h4>
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <ul class="list-unstyled">
+                                <li><a href="#">Category Name</a>
+                                </li>
+                                <li><a href="#">Category Name</a>
+                                </li>
+                                <li><a href="#">Category Name</a>
+                                </li>
+                                <li><a href="#">Category Name</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!-- /.row -->
+                </div>
+
+                <!-- Side Widget Well -->
+                <div class="well">
+                    <h4>Side Widget Well</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, perspiciatis adipisci accusamus laudantium odit aliquam repellat tempore quos aspernatur vero.</p>
+                </div>
+
+            </div>
+
+        </div>
+        <!-- /.row -->
+    </div>
+</article>
