--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -69,19 +69,16 @@ layout: default
 
                 <!-- Blog Categories Well -->
                 <div class="well">
-                    <h4>Blog Categories</h4>
+                  {% for category_name in page.categories limit:1 %}
+                    <h4>{{ category_name | capitalize }}</h4>
+                  {% endfor %}
                     <div class="row">
                         <div class="col-lg-6">
                             <ul class="list-unstyled">
-                                <li><a href="#">Category Name</a>
+                              {% for post in site.categories[category_name] limit:1 %}
+                                <li><a href="{{ post.url }}">{{ post.title }}</a>
                                 </li>
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
-                                </li>
-                            </ul>
+                              {% endfor %}
                         </div>
                     </div>
                     <!-- /.row -->
