Add widgets to post.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -71,23 +71,22 @@ layout: default
                 <div class="well">
                   {% for category_name in page.categories limit:1 %}
                     <h4>{{ category_name | capitalize }}</h4>
-                  {% endfor %}
                     <div class="row">
-                        <div class="col-lg-6">
+                        <div class="col-lg-12">
                             <ul class="list-unstyled">
-                              {% for post in site.categories[category_name] limit:1 %}
+                              {% for post in site.categories[category_name] limit:5 %}
                                 <li><a href="{{ post.url }}">{{ post.title }}</a>
                                 </li>
                               {% endfor %}
                         </div>
                     </div>
+                  {% endfor %}
                     <!-- /.row -->
                 </div>
 
                 <!-- Side Widget Well -->
                 <div class="well">
-                    <h4>Side Widget Well</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, perspiciatis adipisci accusamus laudantium odit aliquam repellat tempore quos aspernatur vero.</p>
+                  {% include contact-info.html %}
                 </div>
 
             </div>
