--- a/_includes/blog-posts.html
+++ b/_includes/blog-posts.html
@@ -4,44 +4,20 @@
         <div class="row">
             <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1">
 
+                {% for post in site.posts %}
                 <!-- Blog Post -->
-                <h2><a href="post.html">Space is big. You just won't believe how vastly, hugely, mind-bogglingly big it is.</a></h2>
+                <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
 
-                <p class="lead">by <a href="#">Jana Bergant</a></p>
-                <p><span class="glyphicon glyphicon-time"></span> Posted on January 29, 2016</p>
+                <p class="lead">by {{ post.author }}</p>
+                <p><span class="glyphicon glyphicon-time"></span> Posted on {{ post.date | date: "%B %d, %Y"}}</p>
+                {% if page.image %}
+                <img class="img-responsive" src="{{ post.image }}" alt="{{ post.title }}">
                 <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mollis, mi nec pretium pulvinar, felis neque accumsan metus, eleifend egestas elit orci vel enim. Morbi pharetra ex velit. Phasellus auctor nec mi ut dictum. Nam et lobortis nisi, sit amet semper lorem. Nulla cursus tempus convallis. Sed pharetra mi eros, vitae feugiat eros sodales et. Donec quis leo massa. Ut vel neque a purus auctor condimentum. Aliquam eget ipsum vitae lectus porta pretium. Sed non pellentesque magna, quis molestie augue. Etiam quis placerat sapien. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In finibus blandit sagittis. Pellentesque imperdiet finibus massa ac sollicitudin.</p>
-
-                <a class="btn btn-primary" href="post.html">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
+                {% endif %}
+                {{ post.excerpt }}
+                <a class="btn btn-primary" href="{{ post.url }}">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
                 <hr>
-
-
-                <!-- Blog Post -->
-                <h2><a href="post.html">Time is an illusion. Lunchtime doubly so.</a></h2>
-
-                <p class="lead">by <a href="#">Jana Bergant</a></p>
-                <p><span class="glyphicon glyphicon-time"></span> Posted on January 29, 2016</p>
-                <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mollis, mi nec pretium pulvinar, felis neque accumsan metus, eleifend egestas elit orci vel enim. Morbi pharetra ex velit. Phasellus auctor nec mi ut dictum. Nam et lobortis nisi, sit amet semper lorem. Nulla cursus tempus convallis. Sed pharetra mi eros, vitae feugiat eros sodales et. Donec quis leo massa. Ut vel neque a purus auctor condimentum. Aliquam eget ipsum vitae lectus porta pretium. Sed non pellentesque magna, quis molestie augue. Etiam quis placerat sapien. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In finibus blandit sagittis. Pellentesque imperdiet finibus massa ac sollicitudin.</p>
-
-                <a class="btn btn-primary" href="post.html">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
-                <hr>
-
-
-
-                <!-- Blog Post -->
-                <h2><a href="post.html">I refuse to answer that question on the grounds that I don't know the answer</a></h2>
-
-                <p class="lead">by <a href="#">Jana Bergant</a></p>
-                <p><span class="glyphicon glyphicon-time"></span> Posted on January 29, 2016</p>
-                <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mollis, mi nec pretium pulvinar, felis neque accumsan metus, eleifend egestas elit orci vel enim. Morbi pharetra ex velit. Phasellus auctor nec mi ut dictum. Nam et lobortis nisi, sit amet semper lorem. Nulla cursus tempus convallis. Sed pharetra mi eros, vitae feugiat eros sodales et. Donec quis leo massa. Ut vel neque a purus auctor condimentum. Aliquam eget ipsum vitae lectus porta pretium. Sed non pellentesque magna, quis molestie augue. Etiam quis placerat sapien. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In finibus blandit sagittis. Pellentesque imperdiet finibus massa ac sollicitudin.</p>
-
-                <a class="btn btn-primary" href="post.html">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
-                <hr>
-
-
-
+                {% endfor %}
 
             </div>
         </div>
