--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -2,6 +2,7 @@
   <form action="//formspree.io/william.wen@gmail.com" method="POST">
   <div class="col-md-6 col-sm-12">
     <div class="block">
+        <input type="hidden" name="_next" value="{{ site.url }}/thanks.html" />      
         <div class="form-group">
           <input type="text" name="name" class="form-control" placeholder="Your Name">
         </div>
