--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ a:active {
   color: #666;
 }
 /*--
-	Header Start 
+	Header Start
 --*/
 header {
   background: #fff;
@@ -83,10 +83,10 @@ font header .navbar-default .navbar-nav li a:hover {
   color: #000;
 }
 /*---------------------------------------------
-					Index Start 
+					Index Start
 -----------------------------------------------*/
 /*--
-	Slider Start 
+	Slider Start
 --*/
 #slider {
   background: url("../img/slider-bg.jpg") no-repeat;
@@ -134,7 +134,7 @@ font header .navbar-default .navbar-nav li a:hover {
     padding: 50px 0 40px;
 }
 /*--
-	wrapper Start 
+	wrapper Start
 --*/
 #intro {
   padding: 100px 0;
@@ -159,7 +159,7 @@ font header .navbar-default .navbar-nav li a:hover {
   padding-top: 20px;
 }
 /*--
-	service Start 
+	service Start
 --*/
 #service {
   text-align: center;
@@ -185,7 +185,7 @@ font header .navbar-default .navbar-nav li a:hover {
   line-height: 1.8;
 }
 /*--
-	call-to-action Start 
+	call-to-action Start
 --*/
 #call-to-action {
   background: url("../img/call-to-action-bg.jpg") no-repeat;
@@ -227,7 +227,7 @@ font header .navbar-default .navbar-nav li a:hover {
   margin-top: 30px;
 }
 /*--
-	Feature Start 
+	Feature Start
 --*/
 #feature {
   background: url("../img/featue-bg.jpg");
@@ -266,7 +266,7 @@ font header .navbar-default .navbar-nav li a:hover {
   padding: 10px 20px;
 }
 /*--
-	content Start 
+	content Start
 --*/
 #testimonial {
   padding: 100px 0;
@@ -341,7 +341,7 @@ font header .navbar-default .navbar-nav li a:hover {
   border: 0px;
 }
 /*--
-	features Start 
+	features Start
 --*/
 #clients-logo-section {
   padding-top: 30px;
@@ -351,10 +351,10 @@ font header .navbar-default .navbar-nav li a:hover {
   padding: 0px 50px;
 }
 /*---------------------------------------------
-					Work Start 
+					Work Start
 -----------------------------------------------*/
 /*--
-	Slider-work Start 
+	Slider-work Start
 --*/
 #global-header {
   background: url("../img/slider-bg2.jpg") no-repeat;
@@ -397,7 +397,7 @@ font header .navbar-default .navbar-nav li a:hover {
   word-spacing: 3px;
 }
 /*--
-	portfolio-work Start 
+	portfolio-work Start
 --*/
 #portfolio-work {
   overflow: hidden;
@@ -533,7 +533,7 @@ font header .navbar-default .navbar-nav li a:hover {
   display: none;
 }
 /*--
-	wrapper-work Start 
+	wrapper-work Start
 --*/
 #wrapper-work {
   overflow: hidden;
@@ -583,7 +583,7 @@ font header .navbar-default .navbar-nav li a:hover {
   padding-right: 80px;
 }
 /*--
-	features-work Start 
+	features-work Start
 --*/
 #features-work {
   padding-top: 50px;
@@ -596,14 +596,14 @@ font header .navbar-default .navbar-nav li a:hover {
   padding: 40px 0px;
 }
 /*---------------------------------------------
-					Work Close 
+					Work Close
 -----------------------------------------------*/
 /*=============================================*/
 /*---------------------------------------------
-					 Contact Start 
+					 Contact Start
 -----------------------------------------------*/
 /*--
-	slider-contact Start 
+	slider-contact Start
 --*/
 #slider-contact {
   background: url("../img/slider-bg2.jpg") no-repeat;
@@ -646,28 +646,28 @@ font header .navbar-default .navbar-nav li a:hover {
   word-spacing: 3px;
 }
 /*--
-	contact-form Start 
+	contact-form Start
 --*/
 #contact-form {
   padding-top: 70px;
   padding-bottom: 35px;
 }
-#contact-form .block form .form-group {
+#contact-form .block E:\LAMP\Jekyll\Jana\demosite .form-group {
   padding-bottom: 15px;
   margin: 0px;
 }
-#contact-form .block form .form-group .form-control {
+#contact-form form .block form .form-group .form-control {
   background: #F6F8FA;
   height: 60px;
   border: 1px solid #EEF2F6;
   box-shadow: none;
   width: 100%;
 }
-#contact-form .block form .form-group-2 {
+#contact-form form .block .form-group-2 {
   padding-bottom: 15px;
   margin: 0px;
 }
-#contact-form .block form .form-group-2 textarea {
+#contact-form form .block .form-group-2 textarea {
   background: #F6F8FA;
   height: 135px;
   border: 1px solid #EEF2F6;
@@ -684,7 +684,7 @@ font header .navbar-default .navbar-nav li a:hover {
   font-size: 18px;
 }
 /*--
-	wrapper-contact Start 
+	wrapper-contact Start
 --*/
 .address-block li {
   margin-bottom: 20px;
@@ -736,7 +736,7 @@ font header .navbar-default .navbar-nav li a:hover {
   display: block;
 }
 /*--
-	features-contact Start 
+	features-contact Start
 --*/
 #features-contact {
   padding-top: 50px;
@@ -749,7 +749,7 @@ font header .navbar-default .navbar-nav li a:hover {
   padding: 40px 0px;
 }
 /*---------------------------------------------
-					Contact Close 
+					Contact Close
 -----------------------------------------------*/
 /*--------- Heading------------*/
 .heading {
@@ -770,7 +770,7 @@ font header .navbar-default .navbar-nav li a:hover {
 }
 /*---------------------------*/
 /*--
-	footer Start 
+	footer Start
 --*/
 footer {
   background: #F5F5F5;
