--- a/_includes/blog-posts.html
+++ b/_includes/blog-posts.html
@@ -6,7 +6,7 @@
 
                 {% for post in site.posts %}
                 <!-- Blog Post -->
-                <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+                <h2><a href="{{ post.url | prepend: site.github.url}}">{{ post.title }}</a></h2>
 
                 <p class="lead">by {{ post.author }}</p>
                 <p><span class="glyphicon glyphicon-time"></span> Posted on {{ post.date | date: "%B %d, %Y"}}</p>
@@ -15,7 +15,7 @@
                 <hr>
                 {% endif %}
                 {{ post.excerpt }}
-                <a class="btn btn-primary" href="{{ post.url }}">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <a class="btn btn-primary" href="{{ post.url | prepend: site.github.url}}">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
                 <hr>
                 {% endfor %}
 
