Tye my site url setting

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,18 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <meta name="description" content="">
-    <base href="{{ site.url }}"
+    <base href="{{ site.github.url }}"
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <!-- CSS -->
-    <link rel="stylesheet" href="css/owl.carousel.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/ionicons.min.css">
-    <link rel="stylesheet" href="css/animate.css">
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="{{ site.github.url }}/css/owl.carousel.css">
+    <link rel="stylesheet" href="{{ site.github.url }}/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{ site.github.url }}/css/font-awesome.min.css">
+    <link rel="stylesheet" href="{{ site.github.url }}/css/style.css">
+    <link rel="stylesheet" href="{{ site.github.url }}/css/ionicons.min.css">
+    <link rel="stylesheet" href="{{ site.github.url }}/css/animate.css">
+    <link rel="stylesheet" href="{{ site.github.url }}/css/responsive.css">
 
     <!-- Js -->
     <script src="js/vendor/modernizr-2.6.2.min.js"></script>
