--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -77,7 +77,7 @@ layout: default
                         <div class="col-lg-12">
                             <ul class="list-unstyled">
                               {% for post in site.categories[category_name] limit:5 %}
-                                <li><a href="{{ post.url }}">{{ post.title }}</a>
+                                <li><a href="{{ post.github.url }}">{{ post.title }}</a>
                                 </li>
                               {% endfor %}
                         </div>
