--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,21 +19,21 @@
     <link rel="stylesheet" href="{{ site.github.url }}/css/responsive.css">
 
     <!-- Js -->
-    <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+    <script src="{{ site.github.url }}/js/vendor/modernizr-2.6.2.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/min/waypoints.min.js"></script>
-    <script src="js/jquery.counterup.js"></script>
+    <script>window.jQuery || document.write('<script src="{{ site.github.url }}/js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
+    <script src="{{ site.github.url }}/js/bootstrap.min.js"></script>
+    <script src="{{ site.github.url }}/js/owl.carousel.min.js"></script>
+    <script src="{{ site.github.url }}/js/plugins.js"></script>
+    <script src="{{ site.github.url }}/js/min/waypoints.min.js"></script>
+    <script src="{{ site.github.url }}/js/jquery.counterup.js"></script>
 
     <!-- Google Map -->
     <script src="https://maps.googleapis.com/maps/api/js"></script>
-    <script src="js/google-map-init.js"></script>
+    <script src="{{ site.github.url }}/js/google-map-init.js"></script>
 
 
-    <script src="js/main.js"></script>
+    <script src="{{ site.github.url }}/js/main.js"></script>
 
 
   </head>
